libecs/tests/Core/Scripting/tests/invalid/property/invalid_property1.pvt
component Test
    pos Vector3
# Specify the type of the variable first, and then its name